# screenshot-auto-upload

./: Cargo.toml  README.md
src/: config.rs  dir_watcher.rs  main.rs  uploader.rs
src/clipboard/: linux.rs  mod.rs  windows.rs
