[package]
name = "spectacle-auto-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clipboard = "0.5.0"
dirs = "6.0.0"
futures = "0.3.31"
notify = "8.0.0"
reqwest = { version = "0.12.12", features = ["multipart", "stream", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1", features = ["full"] }
